refactor: update traitement controller
